# pychaterr

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
examples/: attribute_error.py  http_error.py  importerror.py  zerodivision.py
pychaterr/: __init__.py  chaterr.py
